<resources>
    <string name="app_name">   TuristicApp - San Andrés Islas</string>
    <string name="cueva_de_morgan">Cueva de Morgan</string>
    <string name="descrip_cueva_morgan">MUSEO TRIBUTO A LA LEYENDA DE \"EL PIRATA MORGAN\"</string>
    <string name="foto_descrip">Foto: Andrés Vélez \n(https://www.flickr.com/photos/139734115@N02/28539139338/in/photostream/)</string>
    <string name="temp">27 °C a 31 °C</string>
    <string name="ubicacion">"Se encuentra ubicada al sur de San Andrés, en el km 8 de la avenida circunvalar. "</string>
    <string name="ubication">Se encuentra ubicada al sur de San Andrés, en el km 8 de la avenida circunvalar</string>
    <string name="descip_larga">Se dice que es el lugar donde el pirata Morgan de origen inglés escondía sus tesoros, los isleños en la actualidad se encargan de prolongar la leyenda. Convertida en Museo es una visita para conocer antepasados de la isla y aprender la historia del pirata de San Andrés en un tour guiado por la cueva.</string>
    <string name="dist_airport">Distancia al lugar desde el Aeropuerto: 18 min en auto (6,8  km) por Av. Loma Barrack.</string>
    <string name="cueva">cueva</string>
    <string name="subt_temperatura">Promedio de Temperatura:</string>
    <string name="subt_ubbication">Ubicación:</string>
    <string name="subt_dist_airpot">Distancia al lugar desde el aeropuerto:</string>
    <string name="title_acuario">Cayo Acuario</string>
    <string name="descrip_acuario">"UN ENCUENTRO CON LA NATURALEZA Y ANIMALES FANTASTICOS"</string>
    <string name="descrip_img_cayo">Foto del Cayo Acuario</string>
    <string name="autor_foto_cayo"><![CDATA[Foto: Jhon Freddy O. (https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0f/97/9d/08/photo2jpg.jpg?w=1200&h=-1&s=1)]]></string>
    <string name="temp_cayo">28°C a 31°C</string>
    <string name="subtitle_ubication">Ubicación:</string>
    <string name="ubication_cayo">Este de la Isla de San Andrés, al frente de su puerto. A 200 metros al norte de Cayo Haynes.</string>
    <string name="description_cayo">Playa blanca con agua cristalina donde se puede disfrutar del contacto con diferentes animales acuáticos como peces, mantarrayas,  erizos y pequeños tiburones. Igualmente, se puede realizar pràcticas acuáticas. En este lugar se podrá degustar de comida de mar y el árbol del pan, el cual es un plato típico de la región. Es importante tener en cuenta que el precio del tour es de $38.000 incluyendo Johnny Cay.</string>

    <!--Spratt Bight-->
    <string name="title_spratt_bight">Spratt Bight</string>
    <string name="general_description_spratt_bight">"LA PLAYA MÁS TURÍSTICA Y MÁS RECONOCIDA DE SAN ANDRÉS."</string>
    <string name="description_img_spratt_bight">Foto de la playa Spratt Bight</string>
    <string name="author_photo_spratt_bight"><![CDATA[Foto: Pablo Gonzalez (https://www.flickr.com/photos/pablo_javier/)]]></string>
    <string name="subtitle_temperature">Promedio de Temperatura:</string>
    <string name="temperature_spratt_bight">24 °C a 30 °C</string>
    <string name="subtitle_location">Ubicación:</string>
    <string name="location_spratt_bight">North End, frente al hotel Decameron El Isleño.</string>
    <string name="description_spratt_bight">Debido a su excelente localización, a los casi 500 metros de extensión de playas de arena blanca, limpias, seguras y cercanas a restaurantes, complejos hoteleros, bares, cafés y áreas comerciales, esta es una visita imprescindible para los visitantes que llegan a la isla buscando disfrutar del ambiente caribeño.</string>
    <string name="subtitle_distance_airport">Distancia al lugar desde el Aeropuerto: </string>
    <string name="distance_airport_spratt_bight">1.4 km (17 min a pie – 6 min en auto).</string>

    <string name="score_spratt_bight">4.5 / 5.0</string>


</resources>
